deploy/danbaker-info-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danbaker-info-ssl-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: danbaker-info-certificate
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: danbaker.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: danbaker-info-nodeport
            port:
              number: 80
